--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -13,8 +13,15 @@ type: article
 
   <div class="article__content" itemprop="articleBody">{{ content }}</div>
 
+  {%- if _sharing -%}
     <section class="article__sharing d-print-none">{%- include sharing.html -%}</section>
- 
+  {%- endif -%}
+
+
+  {%- if _comment != false -%}
+    <section class="page__comments d-print-none">{%- include comments.html -%}</section>
+  {%- endif -%}
+
 
   <div class="d-print-none">
     {%- include article-footer.html -%}
