add deployment scripts

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -11,7 +11,12 @@ type: article
 <div class="layout--article">
   {%- include article/top/custom.html -%}
 
-  <div class="article__content" itemprop="articleBody">{{ content }}</div>
+  {%- if page.lang == 'ar' -%}
+    <div class="article__content" itemprop="articleBody" dir="rtl">{{ content }}</div>
+  {%- else -%}
+    <div class="article__content" itemprop="articleBody">{{ content }}</div>
+  {%- endif -%}   
+  
 
   {%- if _sharing -%}
     <section class="article__sharing d-print-none">{%- include sharing.html -%}</section>
