integrate google adsense

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,7 @@
 {%- else -%}
   <header class="header" {%- if include.background -%} style="background: {{ include.background }};" {%- endif -%}>
 {%- endif -%}
+    {%- include google-adsense.html -%}
     <div class="main">
       <div class="header__title">
         <div class="header__brand">
